--- a/index.html
+++ b/index.html
@@ -1,28 +1,37 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Yeezy Global ERP System</title>
-    <meta name="description" content="Yeezy Global ERP System - Integrated Order Management, Inventory, and Fulfillment Platform" />
-    <meta name="author" content="Yeezy Global" />
-    
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 
-    <meta property="og:title" content="Yeezy Global ERP System" />
-    <meta property="og:description" content="Integrated Order Management, Inventory, and Fulfillment Platform" />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Yeezy Global ERP System</title>
+  <meta name="description"
+    content="Yeezy Global ERP System - Integrated Order Management, Inventory, and Fulfillment Platform" />
+  <meta name="author" content="Yeezy Global" />
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@Lovable" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-  </head>
+  <!-- Favicons -->
+  <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+  <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+  <link rel="apple-touch-icon" href="/favicon.svg" />
 
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@300;400;500;600;700&display=swap"
+    rel="stylesheet">
+
+  <meta property="og:title" content="Yeezy Global ERP System" />
+  <meta property="og:description" content="Integrated Order Management, Inventory, and Fulfillment Platform" />
+  <meta property="og:type" content="website" />
+  <meta property="og:image" content="/yeezy-og-image.png" />
+
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:site" content="@YeezyGlobal" />
+  <meta name="twitter:image" content="/yeezy-og-image.png" />
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
